[tool.poetry]
name = "action_server"
version = "0.0.1"
description = ""
authors = ["Robocorp Technologies <info@robocorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = ">=0.0.313, <0.1"
openai = "^0.28.1"
langchain-robocorp = {path = "../../libs/partners/robocorp"}

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.4"
fastapi = "^0.104.0"
sse-starlette = "^1.6.5"

[tool.langserve]
export_module = "action_server"
export_attr = "agent_executor"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
