[tool.poetry]
name = "basic_critique_revise"
version = "0.0.1"
description = "Iteratively generate schema candidates and revise based on errors"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.1"
openai = "<2"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.21"
fastapi = ">=0.104.0,<1"
sse-starlette = "^1.6.5"

[tool.langserve]
export_module = "basic_critique_revise"
export_attr = "chain"

[tool.templates-hub]
use-case = "research"
author = "LangChain"
integrations = ["OpenAI", "Function Calling", "Pydantic"]
tags = ["research", "function-calling"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
