[tool.poetry]
name = "bedrock-jcvd"
version = "0.1.0"
description = "LangChain template that behaves like JCVD using Anthropic's Claude on Amazon Bedrock"
authors = ["JGalego <jgalego1990@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
boto3 = "^1.33.10"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
